# codex-axi

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
compatibility/: manifest.json  output-schema.json
compatibility/fixtures/: codex-0.144-sdk-0.1.0b3.json  codex-0.144-sdk-0.144.4.json
compatibility/integrations/: claude-v1.json  opencode-v1.js  opencode-v1.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMPATIBILITY.md  IMPLEMENTATION.md  RELEASING.md  SPEC.md
scripts/: check_output_contracts.py  live_compat_smoke.py
skills/codex-axi/: SKILL.md
src/codex_axi/: __init__.py  app.py  cli.py  errors.py  events.py  guidance.py  integrations.py  lifecycle.py  locking.py  mcp.py  output.py  runner.py  runtime.py  skill.py  state.py
tests/: test_app.py  test_cli.py  test_compatibility_manifest.py  test_errors.py  test_events.py  test_integrations.py  test_mcp.py  test_output.py  test_output_contracts.py  test_protocol_contract.py  test_runtime.py  test_skill.py  test_state.py  test_worker_send.py
tests/fixtures/output/: command-goldens.json  documents.json
